--- a/make.conf
+++ b/make.conf
@@ -2,16 +2,48 @@
 # built this stage.
 # Please consult /usr/share/portage/config/make.conf.example for a more
 # detailed example.
+# FIXME: Add -march flag based on https://wiki.gentoo.org/wiki/Safe_CFLAGS
 COMMON_FLAGS="-O2 -pipe"
 CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
+CPU_FLAGS_X86=
+CHOST=
+CBUILD=
+VIDEO_CARDS=
+
+MAKEOPTS=
+
+USE="amd64 threads"
+
+EMERGE_DEFAULT_OPTS="--jobs --autounmask-write --verbose-conflicts"
+
+PORTAGE_NICENESS=
+
+ACCEPT_LICENSE="@FREE"
+
+ACCEPT_KEYWORDS="amd64 ~amd64"
+
+ABI_X86="64"
+
+#CCACHE_SIZE="2G"
 
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
 PKGDIR="/var/cache/binpkgs"
+PORTAGE_LOGDIR="/var/log/portage"
+
+# Verify the values in `emerge --info`
+# PKGDIR='/usr/portage/packages'
+# PORTAGE_LOGDIR='/var/log/portage'
+# PORTDIR_OVERLAY='/usr/local/portage'
+# DISTDIR='/usr/portage/distfiles'
+# PKGDIR='/usr/portage/packages'
+# PORTAGE_TMPDIR='/var/tmp'
+# PORTAGE_CONFIGROOT='/'
+# CONFIG_PROTECT='/etc /usr/share/gnupg/qualified.txt'
 
 # This sets the language of build output to English.
 # Please keep this setting intact when reporting bugs.
