--- a/repos.conf
+++ b/repos.conf
@@ -2,10 +2,9 @@
 main-repo = gentoo
 
 [gentoo]
-location = /usr/portage
-sync-type = rsync
-# FIXME: Your mirror here!
-sync-uri = rsync://mirror.dkm.cz/gentoo/ rsync://ftp.fi.muni.cz/pub/linux/gentoo/
+location = /var/db/repos/portage
+sync-type = git
+sync-uri = git+ssh://git@github.com:gentoo/gentoo.git
 auto-sync = yes
 sync-rsync-verify-jobs = 1
 sync-rsync-verify-metamanifest = yes
@@ -16,3 +15,8 @@ sync-openpgp-key-refresh-retry-overall-timeout = 1200
 sync-openpgp-key-refresh-retry-delay-exp-base = 2
 sync-openpgp-key-refresh-retry-delay-max = 60
 sync-openpgp-key-refresh-retry-delay-mult = 4
+
+[bobwya]
+location = /var/db/repos/bobwya
+sync-type = git
+sync-uri = https://github.com/bobwya/bobwya.git
