--- a/make.conf
+++ b/make.conf
@@ -1,52 +1,19 @@
-
-# Flags
-COMMON_FLAGS="-O2 -pipe -march=skylake"
+# These settings were set by the catalyst build script that automatically
+# built this stage.
+# Please consult /usr/share/portage/config/make.conf.example for a more
+# detailed example.
+COMMON_FLAGS="-O2 -pipe"
 CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
-LDFLAGS="-Wl,-O1 -Wl,--as-needed"
-CPU_FLAGS_X86="" # FIXME: Add flags from cpuid2cpuflags
-CHOST="x86_64-pc-linux-gnu"
-CBUILD="x86_64-pc-linux-gnu"
-VIDEO_CARDS="" # FIXME: Add flags for VIDEO_CARDS
 
-USE="amd64 threads"
-
-# Package specific
-ACCEPT_LICENSE="-* @FREE"
-ACCEPT_KEYWORDS="amd64 ~amd64"
-ABI_X86="-* 64"
-ELIBC="glibc"
-KERNEL="linux"
-USERLAND="GNU"
-
-# Target specific
-RUBY_TARGETS="ruby24"
-PYTHON_TARGETS="python2_7 python3_6"
-PYTHON_SINGLE_TARGET="python3_6"
-POSTGRES_TARGETS="postgres9_5 postgres10"
-PHP_TARGETS="php5-6 php7-1"
-
-# Portage hierarchy
+# NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
 PKGDIR="/var/cache/binpkgs"
-PORTAGE_LOGDIR="/var/log/portage"
-PORTAGE_TMPDIR="/var/tmp"
-# PORTAGE_CONFIGROOT='/'
 
-# Misc
-FEATURES="-* userpriv xattr"
-MAKEOPTS="-j4"
-INPUT_DEVICES="libinput keyboard mouse"
-EMERGE_DEFAULT_OPTS="--jobs --autounmask-write --verbose-conflicts"
-PORTAGE_NICENESS="-19"
-CONFIG_PROTECT="/etc /usr/share/gnupg/qualified.txt"
-PORTAGE_RSYNC_OPTS="--recursive --links --safe-links --perms --times --omit-dir-times --compress --force --whole-file --delete --stats --human-readable --timeout=180 --exclude=/distfiles --exclude=/local --exclude=/packages --exclude=/.git"
-#CCACHE_SIZE="2G"
-
-# Language
-LANG="en_US.UTF8"
-LC_ALL="en_US.UTF-8"
-LC_MESSAGES=C # Keep this intact when reporting bugs
+# This sets the language of build output to English.
+# Please keep this setting intact when reporting bugs.
+LC_MESSAGES=C
+GENTOO_MIRRORS="http://mirror.dkm.cz//gentoo"
