--- a/repos.conf/gentoo.conf
+++ b/repos.conf/gentoo.conf
@@ -2,21 +2,18 @@
 main-repo = gentoo
 
 [gentoo]
-location = /var/db/repos/portage
-sync-type = git
-sync-uri = git+ssh://git@github.com:gentoo/gentoo.git
+location = /var/db/repos/gentoo
+sync-type = rsync
+sync-uri = rsync://rsync.gentoo.org/gentoo-portage
 auto-sync = yes
 sync-rsync-verify-jobs = 1
 sync-rsync-verify-metamanifest = yes
 sync-rsync-verify-max-age = 24
 sync-openpgp-key-path = /usr/share/openpgp-keys/gentoo-release.asc
+sync-openpgp-keyserver = hkps://keys.gentoo.org
 sync-openpgp-key-refresh-retry-count = 40
 sync-openpgp-key-refresh-retry-overall-timeout = 1200
 sync-openpgp-key-refresh-retry-delay-exp-base = 2
 sync-openpgp-key-refresh-retry-delay-max = 60
 sync-openpgp-key-refresh-retry-delay-mult = 4
-
-[bobwya]
-location = /var/db/repos/bobwya
-sync-type = git
-sync-uri = https://github.com/bobwya/bobwya.git
+sync-webrsync-verify-signature = yes
