--- a/make.conf
+++ b/make.conf
@@ -11,12 +11,12 @@ CHOST="x86_64-pc-linux-gnu"
 CBUILD="x86_64-pc-linux-gnu"
 VIDEO_CARDS="" # FIXME: Add flags for VIDEO_CARDS
 
-USE="amd64 threads"
+USE="-* amd64 threads"
 
 # Package specific
 ACCEPT_LICENSE="-* @FREE"
 ACCEPT_KEYWORDS="amd64 ~amd64"
-ABI_X86="-* 64"
+ABI_X86="64"
 ELIBC="glibc"
 KERNEL="linux"
 USERLAND="GNU"
@@ -27,6 +27,8 @@ PYTHON_TARGETS="python2_7 python3_6"
 PYTHON_SINGLE_TARGET="python3_6"
 POSTGRES_TARGETS="postgres9_5 postgres10"
 PHP_TARGETS="php5-6 php7-1"
+ADA_TARGET="gnat_2018"
+
 
 # Portage hierarchy
 PORTDIR="/var/db/repos/gentoo"
@@ -34,7 +36,7 @@ DISTDIR="/var/cache/distfiles"
 PKGDIR="/var/cache/binpkgs"
 PORTAGE_LOGDIR="/var/log/portage"
 PORTAGE_TMPDIR="/var/tmp"
-# PORTAGE_CONFIGROOT='/'
+PORTAGE_CONFIGROOT="/"
 
 # Misc
 FEATURES="-* userpriv xattr"
@@ -45,8 +47,30 @@ PORTAGE_NICENESS="-19"
 CONFIG_PROTECT="/etc /usr/share/gnupg/qualified.txt"
 PORTAGE_RSYNC_OPTS="--recursive --links --safe-links --perms --times --omit-dir-times --compress --force --whole-file --delete --stats --human-readable --timeout=180 --exclude=/distfiles --exclude=/local --exclude=/packages --exclude=/.git"
 #CCACHE_SIZE="2G"
+#PORTAGE_BINHOST=""
+
+# Unsets
+ALSA_CARDS=""
+APACHE2_MODULES=""
+CALLIGRA_FEATURES=""
+COLLECTD_PLUGINS=""
+GPSD_PROTOCOLS=""
+LCD_DEVICES=""
+LIBREOFFICE_EXTENSIONS=""
+OFFICE_IMPLEMENTATION=""
+XTABLES_ADDONS=""
+CC=""
+CPPFLAGS=""
+CTARGET=""
+CXX=""
+INSTALL_MASK=""
+PORTAGE_BINZIP2_COMMAND=""
+PORTAGE_COMPRESS=""
+PORTAGE_COMPRESS_FLAGS=""
+PORTAGE_RSYNC_EXTRA_OPTS=""
 
 # Language
 LANG="en_US.UTF8"
 LC_ALL="en_US.UTF-8"
+LINGUAS=""
 LC_MESSAGES=C # Keep this intact when reporting bugs
